frontend/test/should_pass/dpo_002.grg
rule r {
	dpo pattern {
		x: Node -:Edge-> y:Node;
	}
	replace {
	}
}

