frontend/test/should_fail/dangle_012.grg
test r {
    -a:Edge-> x:Node;
    y:Node -a->;
}
